--- a/hazardmap-config.jsonc
+++ b/hazardmap-config.jsonc
@@ -10,7 +10,7 @@
   // 市区町村名を設定してください。
   // ただし、政令指定都市をここに設定することはできません。
   // また、郡は不要です。"比企郡小川町" ではなく "小川町" としてください。
-  "shikuchoson": "八王子市",
+  "shikuchoson": ""文京区",
   
   // ハザードマップポータルサイトで提供されているデータの一覧です。
   // 対象の市区町村に応じて、不要な要素（"{}"で囲まれる単位）を削除してください。
@@ -45,11 +45,6 @@
     {
       "name": "高潮浸水想定区域",
       "url": "https://disaportaldata.gsi.go.jp/raster/03_hightide_l2_shinsuishin_data/{z}/{x}/{y}.png",
-      "attribution": "<a href=\"https://disaportal.gsi.go.jp/hazardmap/copyright/opendata.html\">ハザードマップポータルサイト</a>"
-    },
-    {
-      "name": "津波浸水想定",
-      "url": "https://disaportaldata.gsi.go.jp/raster/04_tsunami_newlegend_data/{z}/{x}/{y}.png",
       "attribution": "<a href=\"https://disaportal.gsi.go.jp/hazardmap/copyright/opendata.html\">ハザードマップポータルサイト</a>"
     },
     {
